--- a/signup.html
+++ b/signup.html
@@ -42,9 +42,10 @@
             </form>
         </div>
         <div class="formImage">
-            <img src="panda.png" alt="">
+            <img src="/images/panda.png" alt="">
             <p>For any query contact us at <a href="https://www.fleetpanda.com">FleetPanda</a></p>
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
