--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             <input type="tel" name="phone" id="phone">
             <span class="error" id="phoneError"></span>
 
-            <label for="password">Password:</label>
-            <input type="password" name="password" id="password">
-            <span class="error" id="passwordError"></span>
+            <label for="Message">Message:</label>
+            <textarea name="msg" id="msg"></textarea>
+            <span class="error" id="MessageError"></span>
 
             <label for="country">Country:</label>
             <select id="country" name="country" >
@@ -281,6 +281,6 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 </body>
 </html>
