--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
     <header>
             <img src="/images/logo.png" alt="logoimg">
-            <ul>
-                <li><a href="">Solutions</a></li>
-                <li><a href="">Why Us</a></li>
-                <li><a href="">Our Story</a></li>
-                <li><a href="">Customers</a></li>
-                <li><a href="">Resources</a></li>
-                <li><a href="">Pricing</a></li>
-            </ul>
+            <div class="nav">
+                <ul>
+                    <li><a href="">Solutions</a></li>
+                    <li><a href="">Why Us</a></li>
+                    <li><a href="">Our Story</a></li>
+                    <li><a href="">Customers</a></li>
+                    <li><a href="">Resources</a></li>
+                    <li><a href="">Pricing</a></li>
+                </ul>
+            </div>
             <ul style="gap: 0.1rem;">
                 <li><a href="login.html">Login/</a></li>
                 <li><a href="signup.html">Sign Up</a></li>
@@ -198,86 +200,93 @@
 </section>
 
 <footer>
-    <div class="leftFooter">
-        <img src="/images/panda2.png" alt="">
-           <p style="color: rgb(241, 73, 7);margin-bottom: -2rem;">Stay connected with us</p> 
-           <div class="socialMedia">
+   
+<div class="leftFooter">
+<div class="footerf">
+    <div class="footerMenu">
+        <div class="footerList" >
+            <h3 >Platforms</h3>
+            <ul>
+                <li>Dispatch Dashboard</li>
+                <li>Reporting & Analytics</li>
+                <li>Driver App</li>
+                <li>Reconciliation & Invoicing</li>
+                <li>Order Management</li>
+                <li>Pricing & Fee Management</li>
+            </ul>
+        </div>
+        <div class="footerList">
+            <h3>Business Line</h3>
+            <ul>
+                <li>On-site Fueling</li>
+                <li>Lubricants</li>
+                <li>Bulk Transport</li>
+                <li>Rental Asset Management</li>
+                <li>Propane/Heating Oil</li>
+            </ul>
+        </div>
+        <div class="footcol">
+            <div class="footerList">
+                <h3>Customers</h3>
+                <ul>
+                    <li>Case Studies</li>
+                    <li>Wall of Love</li>
+                </ul>
+            </div>
+            <div class="footerList">
+                <h3>Resources</h3>
+                <ul>
+                    <li>Blog</li>
+                    <li>Ebook</li>
+                    <li>Webinars</li>
+                    <li>Podcast</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footerList">
+            <h3>Company</h3>
+            <ul>
+                <li>Our Story</li>
+                <li>Why Us</li>
+                <li>Implementation & Support</li>
+                <li>FAQs</li>
+                <li>Product Updates</li>
+                <li>Press</li>
+            </ul>
+        </div>
+    </div>
+
+   
+    <div class="conn">
+        <p style="color: rgb(241, 73, 7);">Stay connected with us</p> 
+        <div class="socialMedia">
             <div class="socialicon">
                 <img src="/images/linkedin.jpg" alt="">
             </div>
             <div class="socialicon">
                 <img src="/images/fb.jpg" alt="">
-            </div>
-               <div class="socialicon">
-                   <img src="email.png" alt=""><p>sales@fleetpanda.com</p>
-            </div>
-                <div class="socialicon">
-                    <img src="/images/phn.png" alt=""><p>415-260-8142
-                    </p>
-                </div>
+          </div>
+           <div class="socialicon">
+            <img src="/images/email.png" alt=""><p>sales@fleetpanda.com</p>
            </div>
-        <p>&copy; 2024 FleetPanda. All Rights Reserved.</p>
-        
+           <div class="socialicon">
+            <img src="/images/phn.png" alt=""><p>415-260-8142
+            </p>
+           </div>
+        </div>
+        <div class="footend">
+            <p>&copy; 2024 FleetPanda. All Rights Reserved.</p>
+            <div class="footrightend">
+                <a href="#">Terms of Services</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+        </div>
     </div>
+<div>
+    </div>
+
     <div class="rightFooter">
-<div class="footerf">
-    <table>
-        <thead>
-            <tr>
-                <th>Quick Links</th>
-                <th>Business Line</th>
-                <th>Customers</th>
-                <th>Company</th>
-            </tr>
-        </thead>
-        <tbody>
-
-            <tr>
-                <td>Dispatch Dashboard</td>
-                <td>On-site Fueling</td>
-                <td>Case Studies</td>
-                <td>Our Story</td>
-            </tr>
-            <tr>
-                <td>Reporting & Analytics</td>
-                <td>Lubricants</td>
-                <td>Wall of Love</td>
-                <td>Why Us</td>
-            </tr>
-            <tr>
-                <td>Driver App</td>
-                <td>Bulk Transport</td>
-                <td></td>
-                <td>Implementation & Support</td>
-            </tr>
-            <tr>
-                <td>Reconcilition & Invoicing</td>
-                <td>Rental Asset Management</td>
-                <td>FAQs</td>
-                <td>Product Updates</td>
-            </tr>
-            <tr>
-                <td>Order Management</td>
-                <td>Propane/Heating Oil</td>
-                <td>Blog</td>
-                <td>Product Updates</td>
-            </tr>
-            <tr>
-                <td>Pricing & Fee Management</td>
-                <td></td>
-                <td>Ebook</td>
-                <td>Press</td>
-            </tr>
-            <tr>
-                <td>Webinars</td>
-            </tr>
-            <tr>
-                <td>Podcast</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
+        <img src="/images/panda2.png" alt="" 300px" height="300px">
     </div>
 </footer>
 
