updated footer page

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
     </div>
 </section>
 
+<hr style="margin-top: 4rem;"/>
 <footer>
-   
 <div class="leftFooter">
 <div class="footerf">
     <div class="footerMenu">
@@ -233,7 +233,7 @@
                     <li>Wall of Love</li>
                 </ul>
             </div>
-            <div class="footerList">
+            <div class="footerList" style="margin-top: 1rem;">
                 <h3>Resources</h3>
                 <ul>
                     <li>Blog</li>
@@ -255,7 +255,6 @@
             </ul>
         </div>
     </div>
-
    
     <div class="conn">
         <p style="color: rgb(241, 73, 7);">Stay connected with us</p> 
@@ -282,9 +281,8 @@
             </div>
         </div>
     </div>
-<div>
-    </div>
-
+</div>
+</div>
     <div class="rightFooter">
         <img src="/images/panda2.png" alt="" 300px" height="300px">
     </div>
