--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="service">
-        <div class="heroSection">
+        <div class="serviceSection">
           <h2>Our Services</h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum
@@ -66,7 +66,7 @@
           </p>
         </div>
 
-        <div class="heroSection">
+        <div class="serviceSection">
           <h2>Our Mission</h2>
           <p>
             <sub>Lorem</sub> ipsum dolor sit, <sup>Lorem</sup>amet consectetur
@@ -83,7 +83,7 @@
             <samp>File not found. 404<br />Press F1 to continue</samp>
           </p>
         </div>
-        <div class="heroSection">
+        <div class="serviceSection">
           <h2>Our Vision</h2>
           <address>
             Written by FleetPanda.<br />
@@ -149,8 +149,6 @@
           <img
             src="images/images (1).jpeg"
             alt=""
-            width="200px"
-            height="200px"
           />
           <h3>xyz</h3>
           <p>Web Developer</p>
@@ -160,7 +158,7 @@
           </p>
         </div>
         <div class="team-member">
-          <img src="images/images.jpeg" alt="" height="200px" />
+          <img src="images/images.jpeg" alt=""  />
           <h3>xyz</h3>
           <p>Web Developer</p>
           <p>
@@ -172,8 +170,6 @@
           <img
             src="images/download (1).jpeg"
             alt=""
-            width="200px"
-            height="200px"
           />
           <h3>xyz</h3>
           <p>Web Developer</p>
@@ -210,9 +206,9 @@
               "
               >Carl Kleimann</span
             >
-            <h3 style="color: rgb(102, 101, 101)">
+            <h4 style="color: rgb(102, 101, 101)">
               Co-owner of Moffitt Services
-            </h3>
+            </h4>
           </div>
           <div class="cardbottom">
             <button class="testBtn">Read full case study</button>
@@ -236,9 +232,9 @@
               "
               >Michael Louis</span
             >
-            <h3 style="color: rgb(102, 101, 101)">
+            <h4 style="color: rgb(102, 101, 101)">
               Vice President at Pacific States Petroleum
-            </h3>
+            </h4>
           </div>
           <div class="cardbottom">
             <button class="testBtn">Read full case study</button>
@@ -261,9 +257,9 @@
               "
               >Alex Salazar</span
             >
-            <h3 style="color: rgb(102, 101, 101)">
+            <h4 style="color: rgb(102, 101, 101)">
               VP of Operations at 3L Energy Solutions
-            </h3>
+            </h4>
           </div>
           <div class="cardbottom">
             <button class="testBtn">Read full case study</button>
