--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="./App/signup.html">Sign Up</a></li>
       </ul>
     </header>
+    
     <div class="home">
       <div class="homecontent">
         <h3>Welcome to <mark>FleetPanda</mark></h3>
@@ -44,6 +45,24 @@
         <button class="sbtn">Why FleetPanda</button>
       </div>
     </div>
+
+    <section class="tools">
+      <div class="toolsTitle">
+        <h1>Tools to beat competitors</h1>
+        <p>Ensure timely deliveries, faster invoices and exceptional customer service - every single time</p
+        </div>
+        <div class="toolsContainer">
+        <div class="toolsLeft">
+          <h3>sdfsdfgdfb</h3>
+          <p>dfgdfgdfgdfgdfgdfgdfgdfg
+            dfgdfgdfgdfgdfgdfgdfgdfgdfgdfg</p>
+        </div>
+        <div class="toolsRight">
+          <img src="./images//Dashboard.gif" alt="">
+        </div>
+      </div>
+    </section>    
+
 
     <section class="hero">
       <div class="hero-text">
@@ -378,3 +397,5 @@
     </footer>
   </body>
 </html>
+
+
