--- a/App/signup.html
+++ b/App/signup.html
@@ -9,7 +9,7 @@
   <body>
     <section class="formSection">
       <div class="form-container">
-        <form id="form" method="post" onsubmit="validateForm(event)">
+        <form id="submitform" method="post">
           <h2>Sign Up</h2>
           <label for="name">Name:</label>
           <input type="text" name="name" id="name" minlength="5" />
@@ -38,6 +38,7 @@
         </p>
       </div>
     </section>
-    <script src="../scripts/signup.js"></script>
+    <script type="module" src="../scripts/signup.js"></script>
   </body>
 </html>
+
