--- a/App/posts.html
+++ b/App/posts.html
@@ -24,7 +24,7 @@
     <div id="postcontainer">
        
     </div>
-    <script src="../scripts/posts.js"></script>
+    <script type="module" src="../scripts/posts.js"></script>
 </body>
 </html>
 
