--- a/index.html
+++ b/index.html
@@ -51,18 +51,43 @@
         <h1>Tools to beat competitors</h1>
         <p>Ensure timely deliveries, faster invoices and exceptional customer service - every single time</p
         </div>
-        <div class="toolsContainer">
-        <div class="toolsLeft">
-          <h3>sdfsdfgdfb</h3>
-          <p>dfgdfgdfgdfgdfgdfgdfgdfg
-            dfgdfgdfgdfgdfgdfgdfgdfgdfgdfg</p>
+        <div class="tools__container">
+          <div class="tools__left">
+            <div class="tools__left__item">
+              <h3>Dispatch Dashboard</h3>
+          <h2>+</h2>
         </div>
-        <div class="toolsRight">
+        <div class="tools__left__item">
+          <h3>Order Management</h3>
+          <h2>+</h2>
+        </div>
+        <div class="tools__left__item">
+          <h3>Driver App</h3>
+          <h2>+</h2>
+        </div>
+        <div class="tools__left__item">
+          <h3>Biling and Invoicing</h3>
+          <h2>+</h2>
+        </div>
+        <div class="tools__left__item">
+          <h3>Customers Portal for your Customers</h3>
+          <h2>+</h2>
+        </div>
+        <div class="tools__left__item">
+          <h3>Integrations</h3>
+          <h2>+</h2>
+        </div>
+        <div class="tools__left__item">
+          <h3>Pricing and contract automation</h3>
+          <h2>+</h2>
+        </div>
+        
+      </div>
+        <div class="tools__right">
           <img src="./images//Dashboard.gif" alt="">
         </div>
       </div>
     </section>    
-
 
     <section class="hero">
       <div class="hero-text">
