--- a/App/login.html
+++ b/App/login.html
@@ -25,18 +25,17 @@
           type="email"
           name="email"
           id="email"
-          autocomplete="off"
           placeholder="Enter Email Address"
         />
         <span class="error" id="emailError"></span>
-
-        <!-- <label for="password">Password:</label>
+        <label for="password">Password:</label>
         <input
           type="password"
           name="password"
-          id="password" autocomplete="off"
-          placeholder="Enter Password"
-        /> -->
+          id="password"
+          autocomplete="off"
+          placeholder="Enter password "
+        />
         <span class="error" id="passwordError"></span>
 
         <button type="submit">Login</button>
