--- a/App/postDetails.html
+++ b/App/postDetails.html
@@ -26,7 +26,7 @@
         <h3 id="post-title"></h3>
         <p id="post-body"></p>
     </div>
-    <script src="../scripts/postDetails.js"></script>
+    <script type="module" src="../scripts/postDetails.js"></script>
 </body>
 </html>
 
